fixed minor alignment issues

--- a/style.css
+++ b/style.css
@@ -322,6 +322,7 @@ button:active {
     border-radius: 4px;
     overflow: hidden;
     display: flex;
+    aspect-ratio: 16/24;
 }
 
 .book:hover .book__img {
